Fix bug: content is too wide when JS is disabled.

--- a/www/css/style-rts.windows.css
+++ b/www/css/style-rts.windows.css
@@ -49,6 +49,10 @@ body.no-scroll {
 /*= Immediate children of body =*/
 /*=----------------------------=*/
 
+body > * {
+	max-width: 900px;
+}
+
 #content {
 	margin: 0 auto;
 	padding: 0 30px;
